Added demo slide

--- a/index.html
+++ b/index.html
@@ -684,6 +684,9 @@
           </ul>
         </section>
         <section>
+          <h1>DEMO 🤓</h2>
+        </section>
+        <section>
           <h2>Thank you for your attention!</h2>
           <img src="/assets/meme3.webp" width="700" />
         </section>
