Updated real world and readme

--- a/index.html
+++ b/index.html
@@ -365,6 +365,9 @@
         <section>
           <img data-src="/assets/real-world01.png" />
         </section>
+        <section>
+          <img data-src="/assets/real-world01a.png" />
+        </section>
 
         <section data-transition="slide-in none">
           <img style="margin-bottom: 0" data-src="/assets/real-world02.png" />
