--- a/index.html
+++ b/index.html
@@ -633,13 +633,13 @@
         <section>
           <h4>Drawbacks</h4>
           <ul>
-            <li style="color: white" class="fragment fade-in-then-semi-out">
+            <li style="color: white; font-size: 3rem;" class="fragment fade-in-then-semi-out">
               Young age
             </li>
-            <li style="color: white" class="fragment fade-in-then-semi-out">
+            <li style="color: white; font-size: 3rem;" class="fragment fade-in-then-semi-out">
               Quite barebones
             </li>
-            <li style="color: white" class="fragment fade-in-then-semi-out">
+            <li style="color: white; font-size: 3rem;" class="fragment fade-in-then-semi-out">
               Shipping size might get bigger in large applications
             </li>
           </ul>
@@ -647,28 +647,28 @@
         <section>
           <h4>Where to start</h4>
           <ul>
-            <li class="fragment fade-in-then-semi-out">
+            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
               <a href="https://svelte.dev">Svelte.dev</a> tutorial and REPL
             </li>
-            <li class="fragment fade-in-then-semi-out">
+            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
               <a href="https://frontendmasters.com/courses/svelte/"
                 >Frontendmasters.com</a
               >
               Rich Harris' introduction to Svelte
             </li>
-            <li class="fragment fade-in-then-semi-out">
+            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
               Rich Harris'
               <a href="https://www.youtube.com/watch?v=AdNJ3fydeao"
                 >Rethinking Reactivity</a
               >
               - reasons behind Svelte
             </li>
-            <li class="fragment fade-in-then-semi-out">
+            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
               JS Party
               <a href="https://changelog.com/jsparty/205">no 205</a> podcast
               with Rich Harris
             </li>
-            <li class="fragment fade-in-then-semi-out">
+            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
               <a href="https://www.svelteradio.com/">Svelte Radio</a> podcast
             </li>
           </ul>
@@ -676,22 +676,22 @@
         <section>
           <h4>Summary</h4>
           <ul>
-            <li class="fragment fade-in-then-semi-out">Great DX</li>
-            <li class="fragment fade-in-then-semi-out">Better performance</li>
-            <li class="fragment fade-in-then-semi-out">
+            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">Great DX</li>
+            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">Better performance</li>
+            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
               Ease to introduce less experienced developers
             </li>
-            <li class="fragment fade-in-then-semi-out">
+            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
               Worth considering especially in smaller projects
             </li>
           </ul>
         </section>
-        <section>
+        <!-- <section>
           <h1>DEMO 🤓</h2>
-        </section>
+        </section> -->
         <section>
           <h2>Thank you for your attention!</h2>
-          <img src="/assets/meme3.webp" width="700" />
+          <img src="/assets/meme3.webp" width="800" />
         </section>
         <section>
           <h2>
