Added devjs imgs

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <div class="reveal">
       <div class="slides">
         <section>
+          <img src="/assets/intro.jpg" width="1500" />
+        </section>
+
+        <section>
           <img height="150" data-src="/assets/logo.svg" /> <br />
           <h1 style="color: orangered">Svelte</h1>
           <h2>is it time to jump on the hypetrain?</h2>
@@ -635,13 +639,22 @@
         <section>
           <h4>Drawbacks</h4>
           <ul>
-            <li style="color: white; font-size: 3rem;" class="fragment fade-in-then-semi-out">
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
               Young age
             </li>
-            <li style="color: white; font-size: 3rem;" class="fragment fade-in-then-semi-out">
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
               Quite barebones
             </li>
-            <li style="color: white; font-size: 3rem;" class="fragment fade-in-then-semi-out">
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
               Shipping size might get bigger in large applications
             </li>
           </ul>
@@ -649,28 +662,43 @@
         <section>
           <h4>Where to start</h4>
           <ul>
-            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
               <a href="https://svelte.dev">Svelte.dev</a> tutorial and REPL
             </li>
-            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
               <a href="https://frontendmasters.com/courses/svelte/"
                 >Frontendmasters.com</a
               >
               Rich Harris' introduction to Svelte
             </li>
-            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
               Rich Harris'
               <a href="https://www.youtube.com/watch?v=AdNJ3fydeao"
                 >Rethinking Reactivity</a
               >
               - reasons behind Svelte
             </li>
-            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
               JS Party
               <a href="https://changelog.com/jsparty/205">no 205</a> podcast
               with Rich Harris
             </li>
-            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
               <a href="https://www.svelteradio.com/">Svelte Radio</a> podcast
             </li>
           </ul>
@@ -678,18 +706,34 @@
         <section>
           <h4>Summary</h4>
           <ul>
-            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">Great DX</li>
-            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">Better performance</li>
-            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
+              Great DX
+            </li>
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
+              Better performance
+            </li>
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
               Ease to introduce less experienced developers
             </li>
-            <li style="color: white; font-size: 3rem;"  class="fragment fade-in-then-semi-out">
+            <li
+              style="color: white; font-size: 3rem"
+              class="fragment fade-in-then-semi-out"
+            >
               Worth considering especially in smaller projects
             </li>
           </ul>
         </section>
         <section>
-          <h1>DEMO 🤓</h2>
+          <h1>DEMO 🤓</h1>
         </section>
         <section>
           <h2>Thank you for your attention!</h2>
@@ -697,14 +741,17 @@
         </section>
         <section>
           <h2>
-            <a style="color: white" href="https://github.com/szuvi/svelte"
+            <h1>Q&A 🤔</h1>
+            <a
+              style="color: white; font-size:80px"
+              href="https://github.com/szuvi/svelte"
               >github.com/szuvi/svelte</a
             >
           </h2>
         </section>
       </div>
     </div>
-npm 
+    npm
     <script src="dist/reveal.js"></script>
     <script src="plugin/zoom/zoom.js"></script>
     <script src="plugin/notes/notes.js"></script>
