Updated last screen

--- a/index.html
+++ b/index.html
@@ -740,14 +740,16 @@
           <img src="/assets/meme3.webp" width="800" />
         </section>
         <section>
+          <h1>Q&A 🤔</h1>
           <h2>
-            <h1>Q&A 🤔</h1>
             <a
-              style="color: white; font-size:80px"
+              style="color: white; font-size: 80px"
               href="https://github.com/szuvi/svelte"
               >github.com/szuvi/svelte</a
             >
           </h2>
+          <img src="/assets/fb.png" width="200"/>
+          <img src="/assets/yt.png" width="200"/>
         </section>
       </div>
     </div>
