--- a/index.html
+++ b/index.html
@@ -425,7 +425,9 @@
           <img data-src="/assets/stone.png" />
         </section>
         <section>
-          <img data-src="/assets/apple-spotify.png" />
+          <div>
+          <img data-src="/assets/companies.png" />
+        </div>
         </section>
         <section>
           <img data-src="/assets/meme5.jpg" />
